test/src/e2e_vm_tests/test_programs/should_pass/language/u16_bitwise_not/src/main.sw
script;

use core::num::*;
use std::assert::assert;

fn main() -> bool {
    let a: u8 = 2u16;

    assert(a.binary_not() == 65533u16);

    true
}
