test/src/e2e_vm_tests/test_programs/should_fail/recover_bad_int_suffix/src/main.sw
contract;

fn bar() -> bool {
    let x: u8 = 42y8; // Lexer recovery here.

    0 // recovery witness
}
